style: 修复 Alibaba P3C 扫描 13 项命名/流控/并发违规
- 抽象类 MeApplicationEvent → AbstractMeApplicationEvent（全仓库事件继承链同步）
- static final 字段大写：SsoStpUtil.stpLogic → STP_LOGIC、SnowflakeUtils.snowflakeRef → SNOWFLAKE_REF
- Service 实现类补 Impl 后缀：JwtTokenService/SsoUserDetailsService/SsoAuthUserDetailsService/DemoAuthUserDetailsService（含两个测试类改名）
- record 头被 P3C 误判为方法名：Rule/Entry/UpstreamEntry 转为 final class，访问器签名不变
- 方法名 openAPI → openApi；RedisAutoConfiguration 部署模式 switch 补 default
- new Thread ×2 改 Thread.startVirtualThread（RedisController、RedissonLockTest）
- docs/ 全量同名引用与类路径同步更新

验证：./mvnw clean test 全绿（含 Testcontainers）

Co-Authored-By: Claude Code <noreply@anthropic.com>