@@ -101,11 +101,10 @@ public class RedisController implements IRedisApi {
         r.put("firstLock", firstLock);
         r.put("reentrantLock", reentrantLock);
 
-        // 互斥性：在另一个线程尝试获取同一把锁，应失败
+        // 互斥性：在另一个线程尝试获取同一把锁，应失败（虚拟线程，JVM 托管，非手动平台线程）
         boolean[] otherThreadAcquired = {false};
-        Thread t = new Thread(() -> otherThreadAcquired[0] = RedissonLock.tryLock(key, 100, 100),
-                "redis-lock-test");
-        t.start();
+        Thread t = Thread.startVirtualThread(
+                () -> otherThreadAcquired[0] = RedissonLock.tryLock(key, 100, 100));
         try {
             t.join();
         } catch (InterruptedException e) {
